# projectGPT-main

./: .gitignore  main.py  pyproject.toml  requirements.txt  threads_db  threads_db.db
app/: config.py  database.py  deps.py  error_constants.py  helperAI.py  mail_service.py  schemas.py  utils.py
app/api_v1/: assistant.py  client.py  user.py
app/api_v1/templates/email/: email.html
tests/: test_user.py
